--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
             </nav>
         </header>
         <main>
-            <p>Main content</p>
+            <p>Hello!</p>
         </main>
     </body>
 </html>
