--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Website title</h1>
             <nav>
                 <ul>
-                    <li><a href="https://rodriguez27298.github.io/FUT/">FUT Project</a></li>
+                    <li><a href="https://rodriguez27298.github.io/FUT.html">FUT Project</a></li>
                     <li><a href="#!">Link B</a></li>
                     <li><a href="#!">Link C</a></li>
                     <li><a href="#!">Link D</a></li>
