--- a/FUT.html
+++ b/FUT.html
@@ -4,10 +4,25 @@
         <title>Francisco's Website</title>
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="FUT.css">
+		<script type="text/javascript" src="FUT.js"></script>
     </head>
     <body>
-        <h1>Francisco's Website</h1>
-		<header>
-            <h1>Test Page</h1>
+        <h1>Player Search</h1>
+		  <div class="dropdown">
+			<button onclick="myFunction()" class="dropbtn">Dropdown</button>
+			<div id="myDropdown" class="dropdown-content">
+				<input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+				<a href="#about">Pele (98)</a>
+				<a href="#base">Diego Maradona (97)</a>
+				<a href="#blog">Ronaldo (96)</a>
+				<a href="#contact">Pele (95)</a>
+				<a href="#custom">Diego Maradona (95)</a>
+				<a href="#support">Messi (95)</a>
+				<a href="#tools">Cristiano Ronaldo (95)</a>
+				<a href="#tools">Paolo Maldini (94)</a>
+				<a href="#tools">Ronaldo (94)</a>
+				<a href="#tools">Lev Yashin (94)</a>
+  </div>
+</div> 
     </body>
