--- a/FUT.html
+++ b/FUT.html
@@ -13,16 +13,16 @@
 			<button onclick="myFunction()" class="dropbtn">Dropdown</button>
 			<div id="myDropdown" class="dropdown-content">
 				<input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-				<a href="#about">Pele (98)</a>
-				<a href="#base">Diego Maradona (97)</a>
-				<a href="#blog">Ronaldo (96)</a>
-				<a href="#contact">Pele (95)</a>
-				<a href="#custom">Diego Maradona (95)</a>
-				<a href="#support">Messi (95)</a>
-				<a href="#tools">Cristiano Ronaldo (95)</a>
-				<a href="#tools">Paolo Maldini (94)</a>
-				<a href="#tools">Ronaldo (94)</a>
-				<a href="#tools">Lev Yashin (94)</a>
+				<a href="https://www.easports.com/fifa/ultimate-team/fut/database/player/237067/Pel%C3%A9#237067">Pele (98)</a>
+				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/190042/Maradona#190042">Diego Maradona (97)</a>
+				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/37576/Ronaldo#37576">Ronaldo (96)</a>
+				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/237068/Pel%C3%A9#237068">Pele (95)</a>
+				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/237074/Maradona#237074">Diego Maradona (95)</a>
+				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/158023/Messi#50489671">Messi (95)</a>
+				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/20801/Cristiano%20Ronaldo#67129665">Cristiano Ronaldo (95)</a>
+				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/238439/Maldini#238439">Paolo Maldini (94)</a>
+				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/237064/Ronaldo#237064">Ronaldo (94)</a>
+				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/238380/Yashin#238380">Lev Yashin (94)</a>
   </div>
 </div> 
     </body>
