--- a/FUT.html
+++ b/FUT.html
@@ -13,16 +13,16 @@
 			<button onclick="myFunction()" class="dropbtn">Dropdown</button>
 			<div id="myDropdown" class="dropdown-content">
 				<input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-				<a href="https://www.easports.com/fifa/ultimate-team/fut/database/player/237067/Pel%C3%A9#237067">Pele (98)</a>
-				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/190042/Maradona#190042">Diego Maradona (97)</a>
-				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/37576/Ronaldo#37576">Ronaldo (96)</a>
-				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/237068/Pel%C3%A9#237068">Pele (95)</a>
-				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/237074/Maradona#237074">Diego Maradona (95)</a>
-				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/158023/Messi#50489671">Messi (95)</a>
-				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/20801/Cristiano%20Ronaldo#67129665">Cristiano Ronaldo (95)</a>
-				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/238439/Maldini#238439">Paolo Maldini (94)</a>
-				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/237064/Ronaldo#237064">Ronaldo (94)</a>
-				<a href="#https://www.easports.com/fifa/ultimate-team/fut/database/player/238380/Yashin#238380">Lev Yashin (94)</a>
+				<a href="https://www.easports.com/fifa/ultimate-team/fut/database/player/237067/Pel%C3%A9#237067" target="_blank">Pele (98)</a>
+				<a href="https://www.easports.com/fifa/ultimate-team/fut/database/player/190042/Maradona#190042" target="_blank">Diego Maradona (97)</a>
+				<a href="https://www.easports.com/fifa/ultimate-team/fut/database/player/37576/Ronaldo#37576" target="_blank">Ronaldo (96)</a>
+				<a href="https://www.easports.com/fifa/ultimate-team/fut/database/player/237068/Pel%C3%A9#237068" target="_blank">Pele (95)</a>
+				<a href="https://www.easports.com/fifa/ultimate-team/fut/database/player/237074/Maradona#237074" target="_blank">Diego Maradona (95)</a>
+				<a href="https://www.easports.com/fifa/ultimate-team/fut/database/player/158023/Messi#50489671" target="_blank">Messi (95)</a>
+				<a href="https://www.easports.com/fifa/ultimate-team/fut/database/player/20801/Cristiano%20Ronaldo#67129665" target="_blank">Cristiano Ronaldo (95)</a>
+				<a href="https://www.easports.com/fifa/ultimate-team/fut/database/player/238439/Maldini#238439" target="_blank">Paolo Maldini (94)</a>
+				<a href="https://www.easports.com/fifa/ultimate-team/fut/database/player/237064/Ronaldo#237064" target="_blank">Ronaldo (94)</a>
+				<a href="https://www.easports.com/fifa/ultimate-team/fut/database/player/238380/Yashin#238380" target="_blank">Lev Yashin (94)</a>
   </div>
 </div> 
     </body>
