--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="main.css">
+		
     </head>
     <body>
 		<header>
             <h1>Francisco's Website</h1>
+			<p> Select theme:</p>
+			<ul>
+				<li><input type = "button" value = "Light theme" onclick="my_theme('light')"></li>
+				<li><input type = "button" value = "Dark theme" onclick="my_theme('dark')"></li>
+			</ul>
             <nav>
                 <ul>
                     <li><a href="https://rodriguez27298.github.io/FUT.html">FUT Project</a></li>
@@ -28,5 +34,6 @@
             <h3>Third column</h3>
             <p>vitae suscipit tellus mauris a diam maecenas sed enim ut sem viverra aliquet eget sit amet tellus cras adipiscing enim eu turpis egestas pretium aenean pharetra magna ac placerat vestibulum lectus mauris ultrices eros in cursus turpis massa tincidunt dui</p>
         </div>
+	<SCRIPT src="mainFunction.js"></SCRIPT>
     </body>
 </html>
