--- a/indexold.html
+++ b/indexold.html
@@ -11,23 +11,16 @@
 		<header>
             <h1>Francisco's Website</h1>
 			<p> Select theme:</p>
-			<div class="dropdown">
-				<button onclick="myFunction()" class="dropbtn">Dropdown</button>
-					<div id="myDropdown" class="dropdown-content">
-					<ul>
-						<li><input type = "button" value = "Light theme" onclick="my_theme('light')"></li>
-						<li><input type = "button" value = "Dark theme" onclick="my_theme('dark')"></li>
-						<li><input type = "button" value = "Blue theme" onclick="my_theme('blue')"></li>
-						<li><input type = "button" value = "Red theme" onclick="my_theme('red')"></li>
-					</ul>
-					</div>
-			</div>
+			<ul>
+				<li><input type = "button" value = "Light theme" onclick="my_theme('light')"></li>
+				<li><input type = "button" value = "Dark theme" onclick="my_theme('dark')"></li>
+			</ul>
             <nav>
                 <ul>
-                    <li><a id="link" href="https://rodriguez27298.github.io/FUT.html">FUT Project</a></li>
-                    <li><a id="link" href="#!">Link B</a></li>
-                    <li><a id="link" href="#!">Link C</a></li>
-                    <li><a id="link" href="#!">Link D</a></li>
+                    <li><a href="https://rodriguez27298.github.io/FUT.html">FUT Project</a></li>
+                    <li><a href="#!">Link B</a></li>
+                    <li><a href="#!">Link C</a></li>
+                    <li><a href="#!">Link D</a></li>
                 </ul>
             </nav>
         </header>
