--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <body>
 		<header>
             <h1>Francisco's Website</h1>
-			<p> Select theme:</p>
 			<div class="dropdown">
-				<button onclick="myFunction()" class="dropbtn">Dropdown</button>
+				<button onclick="myFunction()" class="dropbtn">Select theme:</button>
 					<div id="myDropdown" class="dropdown-content">
 					<ul>
 						<li><input type = "button" value = "Light theme" onclick="my_theme('light')"></li>
@@ -25,9 +24,9 @@
             <nav>
                 <ul>
                     <li><a id="link" href="https://rodriguez27298.github.io/FUT.html">FUT Project</a></li>
-                    <li><a id="link" href="#!">Link B</a></li>
-                    <li><a id="link" href="#!">Link C</a></li>
-                    <li><a id="link" href="#!">Link D</a></li>
+                    <li><a id="link2" href="https://www.google.com/">Google</a></li>
+                    <li><a id="link3" href="https://www.futhead.com/">Futhead</a></li>
+                    <li><a id="link4" href="https://www.futbin.com/">Futbin</a></li>
                 </ul>
             </nav>
         </header>
