--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
     </head>
     <body>
 		<header>
-            <h1>Francisco's Website</h1>
+            <h1>Francisco's Website for CSE 405 Spring 2019</h1>
 			<div class="dropdown">
 				<button onclick="myFunction()" class="dropbtn">Select theme:</button>
 					<div id="myDropdown" class="dropdown-content">
 					<ul>
 						<li><input type = "button" value = "Light theme" onclick="my_theme('light')"></li>
 						<li><input type = "button" value = "Dark theme" onclick="my_theme('dark')"></li>
-						<li><input type = "button" value = "Blue theme" onclick="my_theme('blue')"></li>
-						<li><input type = "button" value = "Red theme" onclick="my_theme('red')"></li>
 					</ul>
 					</div>
 			</div>
@@ -31,14 +29,16 @@
             </nav>
         </header>
 		<div>
-            <h3>First column</h3>
-            <p>mi in nulla posuere sollicitudin aliquam ultrices sagittis     orci a scelerisque purus semper eget duis at tellus at urna condimentum mattis pellentesque id nibh tortor i    d aliquet lectus proin nibh nisl condimentum id venenatis a condimentum vitae sapien pellentesque habitant mo    rbi tristique senectus et netus et malesuada fames ac turpis</p>
+	    <p>https://rss.app/feeds/miqNk4nK8dGYzoLX.xml</p>
+            <h3>Quarter Proposal</h3>
+            <p>The quarter will be spent on learning the different uses for HTML, javascript and server backend operations and how they can be used for a website. The ultimate goal is to have an advance design, with javascript operations, that contain elements such as an RSS feed and have access to files hosted on my personal computer. Possibly use a browser embedded player for media playback.</p>
         </div><div>
-            <h3>Second column</h3>
-            <p>tortor consequat id porta nibh venenatis cras sed felis eg    et velit aliquet sagittis id consectetur purus ut faucibus pulvinar elementum integer enim neque volutpat ac     tincidunt vitae semper quis lectus nulla at volutpat diam ut</p>
-        </div><div>
-            <h3>Third column</h3>
-            <p>vitae suscipit tellus mauris a diam maecenas sed enim ut sem viverra aliquet eget sit amet tellus cras adipiscing enim eu turpis egestas pretium aenean pharetra magna ac placerat vestibulum lectus mauris ultrices eros in cursus turpis massa tincidunt dui</p>
+            <h3>Research</h3>
+            <p>Research will be updated here as quarter goes on.</p>
+     	    <p><ul><li>Experimenting with adding RSS feeds from twitter on to main page relating to FIFA</li>
+            <li>Updated old main.css and javascipt functions from base website to reflect new objectives</li>
+            <li>Tested having last file added to documents folder on home computer be updated on the website but had authentication errors</li>
+	</p>
         </div>
 	<SCRIPT src="mainFunction.js"></SCRIPT>
     </body>
