--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
             <nav>
                 <ul>
                     <li><a id="link" href="https://rodriguez27298.github.io/FUT.html">FUT Project</a></li>
-                    <li><a id="link2" href="https://www.google.com/">Google</a></li>
-                    <li><a id="link3" href="https://www.futhead.com/">Futhead</a></li>
-                    <li><a id="link4" href="https://www.futbin.com/">Futbin</a></li>
+                    <li>Home PC Server location</li>
                 </ul>
             </nav>
         </header>
