--- a/index.html
+++ b/index.html
@@ -22,22 +22,24 @@
             <nav>
                 <ul>
                     <li><a id="link" href="https://rodriguez27298.github.io/FUT.html">FUT Project</a></li>
-                    <li>Home PC Server location</li>
+                    <li>Home PC Server Location *Testing Assignment 4*</li>
                 </ul>
             </nav>
         </header>
 		<div>
 	    <p>https://rss.app/feeds/miqNk4nK8dGYzoLX.xml</p>
             <h3>Quarter Proposal</h3>
-            <p>The quarter will be spent on learning the different uses for HTML, javascript and server backend operations and how they can be used for a website. The ultimate goal is to have an advance design, with javascript operations, that contain elements such as an RSS feed and have access to files hosted on my personal computer. Possibly use a browser embedded player for media playback.</p>
+            <p>The quarter will be spent on learning the different uses for HTML, javascript and server backend operations and how they can be used for a website. The ultimate goal is to have an advance design, with javascript operations, that contain elements such as an live Twitter feeds and have access to files hosted on my personal computer. Possibly use a browser embedded player for media playback.</p>
         </div><div>
             <h3>Research</h3>
             <p>Research will be updated here as quarter goes on.</p>
-     	    <p><ul><li>Experimenting with adding RSS feeds from twitter on to main page relating to FIFA</li>
+     	    <p><ul><li>Experimenting with adding feeds from twitter on to main page relating to FIFA</li>
             <li>Updated old main.css and javascipt functions from base website to reflect new objectives</li>
             <li>Tested having last file added to documents folder on home computer be updated on the website but had authentication errors</li>
 	</p>
         </div>
+	<div>
+	<p><a class="twitter-timeline" href="https://twitter.com/ChuBoi?ref_src=twsrc%5Etfw">Tweets by ChuBoi</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
 	<SCRIPT src="mainFunction.js"></SCRIPT>
     </body>
 </html>
