--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
 	<div>
 	<p><a class="twitter-timeline" href="https://twitter.com/ChuBoi?ref_src=twsrc%5Etfw">Tweets by ChuBoi</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
 	<SCRIPT src="mainFunction.js"></SCRIPT>
+	</div>
     </body>
 </html>
