--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	</p>
         </div>
 	<div>
+	<h3>Tweet Feed</h3>
 	<p><a class="twitter-timeline" href="https://twitter.com/ChuBoi?ref_src=twsrc%5Etfw">Tweets by ChuBoi</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
 	<SCRIPT src="mainFunction.js"></SCRIPT>
 	</div>
