--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
             <li>Updated old main.css and javascipt functions from base website to reflect new objectives</li>
             <li>Tested having last file added to documents folder on home computer be updated on the website but had authentication errors</li>
 	</p>
-        </div>
-	<div>
+        </div><div>
 	<h3>Tweet Feed</h3>
 	<p><a class="twitter-timeline" href="https://twitter.com/ChuBoi?ref_src=twsrc%5Etfw">Tweets by ChuBoi</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
-	<SCRIPT src="mainFunction.js"></SCRIPT>
 	</div>
+	<SCRIPT src="mainFunction.js"></SCRIPT>
     </body>
 </html>
