--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
 		<div>
             <h3>Quarter Proposal</h3>
             <p>The quarter will be spent on learning the different uses for HTML, javascript and server backend operations and how they can be used for a website. The ultimate goal is to have an advance design, with javascript operations, that contain elements such as an live Twitter feeds and have access to files hosted on my personal computer. Possibly use a browser embedded player for media playback.</p>
+	    <p><a class="twitter-timeline" href="https://twitter.com/ChuBoi?ref_src=twsrc%5Etfw">Tweets by ChuBoi</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
         </div><div>
             <h3>Research</h3>
             <p>Research will be updated here as quarter goes on.</p>
      	    <p><ul><li>Experimenting with adding feeds from twitter on to main page relating to FIFA</li>
             <li>Updated old main.css and javascipt functions from base website to reflect new objectives</li>
             <li>Tested having last file added to documents folder on home computer be updated on the website but had authentication errors</li>
-	</p>
+	    </p>
+	    <a class="twitter-timeline" href="https://twitter.com/Castro1021?ref_src=twsrc%5Etfw">Tweets by Castro1021</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
         </div><div>
 	<h3>Tweet Feed</h3>
-	<p><a class="twitter-timeline" href="https://twitter.com/ChuBoi?ref_src=twsrc%5Etfw">Tweets by ChuBoi</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
+	<a class="twitter-timeline" href="https://twitter.com/EASPORTSFIFA?ref_src=twsrc%5Etfw">Tweets by EASPORTSFIFA</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 	</div>
 	<SCRIPT src="mainFunction.js"></SCRIPT>
     </body>
