--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 	    </p>
 	    <a class="twitter-timeline" href="https://twitter.com/Castro1021?ref_src=twsrc%5Etfw">Tweets by Castro1021</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
         </div><div>
-	<h3>Tweet Feed</h3>
+	<h3>GitHub Feed</h3>
+	<div class="github-widget" rodriguez27298="surbhioberoi"></div>
+	<script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
 	<a class="twitter-timeline" href="https://twitter.com/EASPORTSFIFA?ref_src=twsrc%5Etfw">Tweets by EASPORTSFIFA</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 	</div>
 	<SCRIPT src="mainFunction.js"></SCRIPT>
