--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 	    <a class="twitter-timeline" href="https://twitter.com/Castro1021?ref_src=twsrc%5Etfw">Tweets by Castro1021</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
         </div><div>
 	<h3>GitHub Feed</h3>
-	<div class="github-widget" rodriguez27298="surbhioberoi"></div>
-	<script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
+	<div class="github-widget" data-username="rodriguez27298"></div>
+	<script src="../node_modules/github-card/dist/widget.js"></script>
 	<a class="twitter-timeline" href="https://twitter.com/EASPORTSFIFA?ref_src=twsrc%5Etfw">Tweets by EASPORTSFIFA</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 	</div>
 	<SCRIPT src="mainFunction.js"></SCRIPT>
