--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
 	    </p>
 	    <a class="twitter-timeline" href="https://twitter.com/Castro1021?ref_src=twsrc%5Etfw">Tweets by Castro1021</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
         </div><div>
-	<h3>GitHub Feed</h3>
-	<div class="github-widget" data-username="rodriguez27298"></div>
-	<script src="../node_modules/github-card/dist/widget.js"></script>
-	<a class="twitter-timeline" href="https://twitter.com/EASPORTSFIFA?ref_src=twsrc%5Etfw">Tweets by EASPORTSFIFA</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+	<iframe src="http://tylerlh.github.com/github-latest-commits-widget/?username=rodriguez27298&repo=rodriguez27298.github.io&limit=LIMIT"
+        	allowtransparency="true" frameborder="0" scrolling="no" width="502px" height="252px"></iframe>
+ 	<a class="twitter-timeline" href="https://twitter.com/EASPORTSFIFA?ref_src=twsrc%5Etfw">Tweets by EASPORTSFIFA</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 	</div>
 	<SCRIPT src="mainFunction.js"></SCRIPT>
     </body>
