--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 	    </p>
 	    <a class="twitter-timeline" href="https://twitter.com/Castro1021?ref_src=twsrc%5Etfw">Tweets by Castro1021</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
         </div><div>
+			<video width="640" height="480" controls autoplay loop muted>
+		<source src="TESTVIDEO.mp4" type="video/mp4">
+		Your browser does not support the video tag.
+		</video>
 	<iframe src="https://tylerlh.github.com/github-latest-commits-widget/?username=rodriguez27298&repo=rodriguez27298.github.io&limit=LIMIT"
         	allowtransparency="true" frameborder="0" scrolling="no" width="502px" height="252px"></iframe>
 	<iframe src="https://open.spotify.com/embed/user/spotifycharts/playlist/37i9dQZEVXbLRQDuF5jeBp" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
