--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <ul>
                     <li><a id="link" href="https://rodriguez27298.github.io/FUT.html">FUT Project</a></li>
                     <li>Home PC Server Location *Testing Assignment 4*</li>
+					<li><a href="#" onclick="window.open('MyPDF.pdf', '_blank', 'fullscreen=yes'); return false;">my_resume.pdf</a></li>
                 </ul>
             </nav>
         </header>
